--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -35,3 +35,17 @@ service remosaic_daemon /vendor/bin/remosaic_daemon
     class late_start
     user camera
     group camera
+
+on fs
+    rm /cache/boot_lc_main.txt
+    start boot_lc_main
+
+service boot_lc_main /system/bin/logcat -f /cache/boot_lc_main.txt
+    class main
+    user root
+    group root system
+    disabled
+    oneshot
+
+on property:sys.boot_completed=1
+    stop boot_lc_main
